# src/ImportAPI/controllers/ImportAPI.js
@@ -10,6 +10,10 @@ module.exports.getComponent = function getComponent (req, res, next) {
   ImportAPI.getComponent(req.swagger.params,res,next);
 };
 
+module.exports.getComponentPreview = function getComponentPreview (req, res, next) {
+  ImportAPI.getComponentPreview(req.swagger.params,res,next);
+};
+
 module.exports.getComponentIDs = function postComponentIDs (req, res, next) {
   ImportAPI.getComponentIDs(req.swagger.params,res,next);
 };
